--- a/.github/workflows/love_heart_windows.yml
+++ b/.github/workflows/love_heart_windows.yml
@@ -10,13 +10,15 @@ permissions:
   contents: read
 
 jobs:
+##一个workflow 可以有多个jobs
   pyinstaller-build:
-    runs-on: windows-latest
+  ##申请github 的一个windows虚拟机来执行这个job
+    runs-on: windows-latest   
     steps:
       - name: Create Executable
-        uses: sayyid5416/pyinstaller@v1
+        uses: sayyid5416/pyinstaller@v1 ##别人写好的python 打包脚本
         with:
           python_ver: '3.12'
           spec: 'love_heart.py'
-          upload_exe_with_name: 'love_heart'
+          upload_exe_with_name: 'love_heart'  ##这个love_heart"是一个Python 文件.py，可以用vs code 请copilot 写
           options: --onefile, --name "love_heart", --windowed, 
